--- a/style.css
+++ b/style.css
@@ -18,27 +18,29 @@ body::-webkit-scrollbar {
 
 .header {
     width: 100%;
-    height: 100px;
+    height: 15%;
     padding: 10px;
     background-color: lightgray;
     position: fixed;
     display: flex;
+    align-items: center;
     z-index: 200;
     opacity: 80%;
 }
 
 .header img {
-    width: 75px;
-    height: 75px;
+    width: 10%;
+    min-width: 125px;
+    aspect-ratio: 1/1;
     padding-left: 30px;
-    padding-top: 15px;
     user-select: none;
 }
 
 .header ul {
     width: 30%;
     height: 100px;
-    margin: 0 0 0 auto;
+    margin-left: auto;
+    margin-right: 50px;
     align-items: center;
     list-style-type: none;
     display: flex;
@@ -52,6 +54,7 @@ body::-webkit-scrollbar {
     border-radius: 30px;
     cursor: pointer;
     padding: 7px;
+    font-size: 1.5vw;
 }
 
 .header ul li {
@@ -59,18 +62,24 @@ body::-webkit-scrollbar {
     font-weight: bold;
 }
 
+.header i {
+    display: none;
+    font-size: 30px;
+}
+
 #pocetna {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 750px;
+    height: 75%;
+    min-height: 500px;
     width: 100%;
     background-color: rgb(143, 143, 143);
 }
 
 #pocetna img {
     width: 35%;
-    height: 60%;
+    aspect-ratio: 1/1;
     padding: 15px;
     user-select: none;
     margin: 0 auto;
@@ -80,15 +89,17 @@ body::-webkit-scrollbar {
 
 #tekst h3 {
     text-align: center;
+    font-size: 2vw;
 }
 
 #tekst p {
-    text-align: justify;
+    font-size: 2vw;
 }
 
 #tekst {
     width: 40%;
     margin: auto;
+    max-height: 250px;
 }
 
 #projekti {
@@ -129,4 +140,32 @@ body::-webkit-scrollbar {
 
 .blue {
     background-color: lightblue;
+}
+
+@media only screen and (max-width: 800px){
+    #tekst h3 {
+        text-align: center;
+        font-size: 14px;
+    }
+    
+    #tekst p {
+        font-size: 12px;
+    }
+
+    .header ul a{
+        font-size: 12px;
+        margin: 5px;
+    }
+}
+
+@media only screen and (max-width: 600px){
+    .header ul {
+        display: none;
+    }
+
+    .header i {
+        display: block;
+        position: absolute;
+        right: 10%;
+    }
 }
