--- a/style.css
+++ b/style.css
@@ -143,25 +143,26 @@ body::-webkit-scrollbar {
     background-color: lightblue;
 }
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 800px) {
     #tekst h3 {
         text-align: center;
         font-size: 14px;
     }
-    
+
     #tekst p {
         font-size: 12px;
     }
 
-    .header ul a{
+    .header ul a {
         font-size: 12px;
         margin: 5px;
     }
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 600px) {
     .header ul {
         display: none;
+        width: 100%;
     }
 
     .header button {
