--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar {
 
 .header {
     width: 100%;
-    height: 15%;
+    height: 10%;
     padding: 10px;
     background-color: lightgray;
     position: fixed;
@@ -136,21 +136,21 @@ body::-webkit-scrollbar {
 }
 
 .red {
-    background-color: lightcoral;
+    border: 5px solid lightcoral;
 }
 
 .blue {
-    background-color: lightblue;
+    border: 5px solid lightblue;
 }
 
 @media only screen and (max-width: 800px) {
     #tekst h3 {
         text-align: center;
-        font-size: 14px;
+        font-size: 15px;
     }
 
     #tekst p {
-        font-size: 12px;
+        font-size: 13px;
     }
 
     .header ul a {
