--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
+
 * {
     font-size: 20px;
     font-family: 'Maven Pro', sans-serif;
@@ -16,9 +19,35 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+#naslovna {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    background-image: url('img/background.jpg');
+    background-size: cover;
+    justify-content: center;
+    align-items: center;
+}
+
+#naslovna h1 {
+    font-size: 4vw;
+    font-weight: bold;
+    color: rgb(126, 126, 126);
+    font-family: 'Cairo', sans-serif;
+    user-select: none;
+}
+
+#naslovna p {
+    font-size: 6vw;
+    font-weight: bold;
+    color: rgb(126, 126, 126);
+    font-family: 'Cairo', sans-serif;
+    user-select: none;
+}
+
 .header {
     width: 100%;
-    height: 10%;
+    height: 13%;
     padding: 10px;
     background-color: lightgray;
     position: fixed;
@@ -115,10 +144,11 @@ body::-webkit-scrollbar {
 #projekti-dugmad button {
     margin: 15px;
     padding: 7px;
-    border: 2px solid rgb(110, 110, 110);
+    border: 1px solid rgb(110, 110, 110);
+    font-weight: bold;
     border-radius: 30px;
     cursor: pointer;
-    color: black;
+    color: rgb(110, 110, 110);
 }
 
 #projekti-slike {
@@ -131,7 +161,6 @@ body::-webkit-scrollbar {
 #projekti-slike img {
     width: 200px;
     height: 200px;
-    border: 3px solid grey;
     margin: 15px;
 }
 
@@ -141,6 +170,16 @@ body::-webkit-scrollbar {
 
 .blue {
     border: 5px solid lightblue;
+}
+
+button.red {
+    background-color: lightcoral;
+    color: white;
+}
+
+button.blue {
+    background-color: lightblue;
+    color: white;
 }
 
 @media only screen and (max-width: 800px) {
@@ -156,10 +195,11 @@ body::-webkit-scrollbar {
     .header ul a {
         font-size: 12px;
         margin: 5px;
+        white-space: nowrap;
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 630px) {
     .header ul {
         display: none;
         width: 100%;
@@ -169,5 +209,11 @@ body::-webkit-scrollbar {
         display: block;
         position: absolute;
         right: 10%;
+        top: 10%;
     }
+}
+
+#contact {
+    height: 25%;
+    background-color: darkgray;
 }
