--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 * {
     font-size: 20px;
     font-family: 'Maven Pro', sans-serif;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html,
