--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body::-webkit-scrollbar {
 #naslovna h1 {
     font-size: clamp(32px, 4vw, 4vw);
     font-weight: bold;
-    color: rgb(126, 126, 126);
+    color: #048ABF;
     font-family: 'Cairo', sans-serif;
     user-select: none;
 }
@@ -41,7 +41,7 @@ body::-webkit-scrollbar {
 #naslovna p {
     font-size: clamp(36px, 6vw, 6vw);
     font-weight: bold;
-    color: rgb(126, 126, 126);
+    color: #048ABF;
     font-family: 'Cairo', sans-serif;
     user-select: none;
 }
@@ -50,7 +50,7 @@ body::-webkit-scrollbar {
     width: 100%;
     height: 13%;
     padding: 10px;
-    background-color: lightgray;
+    background-color: #012840;
     position: fixed;
     display: flex;
     align-items: center;
@@ -79,8 +79,8 @@ body::-webkit-scrollbar {
 
 .header ul a {
     text-decoration: none;
-    color: black;
-    border: 2px solid rgb(110, 110, 110);
+    color: white;
+    border: 2px solid white;
     border-radius: 30px;
     cursor: pointer;
     padding: 7px;
@@ -105,7 +105,7 @@ body::-webkit-scrollbar {
     height: 75%;
     min-height: 500px;
     width: 100%;
-    background-color: rgb(143, 143, 143);
+    background-color: #012840;
 }
 
 #pocetna img {
@@ -114,17 +114,18 @@ body::-webkit-scrollbar {
     padding: 15px;
     user-select: none;
     margin: 0 auto;
-    filter: drop-shadow(5px 5px 5px rgb(82, 82, 82));
     z-index: 100;
 }
 
 #tekst h3 {
     text-align: center;
     font-size: 2vw;
+    color: white;
 }
 
 #tekst p {
     font-size: 2vw;
+    color: white;
 }
 
 #tekst {
@@ -135,12 +136,14 @@ body::-webkit-scrollbar {
 
 #projekti {
     width: 100%;
+    background-color: #048ABF;
 }
 
 #projekti-dugmad {
     display: flex;
     justify-content: center;
 }
+
 
 #projekti-dugmad button {
     margin: 15px;
@@ -173,15 +176,15 @@ body::-webkit-scrollbar {
     border: 5px solid lightblue;
 }
 
-button.red {
-    background-color: lightcoral;
+/* button.red {
+    background-color: #383838;
     color: white;
 }
 
 button.blue {
-    background-color: lightblue;
+    background-color: #383838;
     color: white;
-}
+} */ 
 
 @media only screen and (max-width: 800px) {
     #tekst h3 {
@@ -216,5 +219,5 @@ button.blue {
 
 #contact {
     height: 25%;
-    background-color: darkgray;
+    background-color: #697A82;
 }
