--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body::-webkit-scrollbar {
 #naslovna h1 {
     font-size: clamp(32px, 4vw, 4vw);
     font-weight: bold;
-    color: #048ABF;
+    color: #0367A6;
     font-family: 'Cairo', sans-serif;
     user-select: none;
 }
@@ -41,7 +41,7 @@ body::-webkit-scrollbar {
 #naslovna p {
     font-size: clamp(36px, 6vw, 6vw);
     font-weight: bold;
-    color: #048ABF;
+    color: #0367A6;
     font-family: 'Cairo', sans-serif;
     user-select: none;
 }
@@ -50,7 +50,7 @@ body::-webkit-scrollbar {
     width: 100%;
     height: 13%;
     padding: 10px;
-    background-color: #012840;
+    background-color: #022340;
     position: fixed;
     display: flex;
     align-items: center;
@@ -105,7 +105,7 @@ body::-webkit-scrollbar {
     height: 75%;
     min-height: 500px;
     width: 100%;
-    background-color: #012840;
+    background-color: #024873;
 }
 
 #pocetna img {
@@ -136,7 +136,7 @@ body::-webkit-scrollbar {
 
 #projekti {
     width: 100%;
-    background-color: #048ABF;
+    background-color: #03588C;
 }
 
 #projekti-dugmad {
@@ -148,11 +148,12 @@ body::-webkit-scrollbar {
 #projekti-dugmad button {
     margin: 15px;
     padding: 7px;
-    border: 1px solid rgb(110, 110, 110);
+    border: 3px solid white;
+    background: none;
     font-weight: bold;
     border-radius: 30px;
     cursor: pointer;
-    color: rgb(110, 110, 110);
+    color: white;
 }
 
 #projekti-slike {
@@ -219,5 +220,6 @@ button.blue {
 
 #contact {
     height: 25%;
-    background-color: #697A82;
+    background-color: #0367A6;
+    color: white;
 }
