--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
     font-size: 20px;
     font-family: 'Maven Pro', sans-serif;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    scroll-snap-type: y mandatory;
-    transition: all 0.3s ease;
+    scroll-behavior: smooth;
 }
 
 html,
@@ -23,7 +22,6 @@ body::-webkit-scrollbar {
 }
 
 #naslovna {
-    scroll-snap-align: start;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -128,7 +126,6 @@ body::-webkit-scrollbar {
 
 #pocetna {
     display: flex;
-    scroll-snap-align: center;
     justify-content: space-between;
     align-items: center;
     height: 100vh;
@@ -175,7 +172,6 @@ body::-webkit-scrollbar {
 }
 
 #projekti {
-    scroll-snap-align: center;
     width: 100%;
     background-color: #03588c;
 }
@@ -218,7 +214,6 @@ body::-webkit-scrollbar {
 }
 
 #contact-bg {
-    scroll-snap-align: center;
     height: 100vh;
     width: 100%;
     background-color: #0367a6;
